src/pages/Login/Login.css
.Login h1 {
  font-size: 30px;
  line-height: 0.83;
  text-align: center;
  color: var(--grey5-color);
}

.Login .avatars-grid .add-avatar {
  width: 120px;
  height: 120px;
  min-width: 120px;
  background-size: cover;
  background-position: top center;
  border-radius: 50%;
}

.Login .avatars-grid p {
  text-align: center;
  font-size: 18px;
  font-weight: 600;
  line-height: 1.11;
  color: var(--grey4-color);
}

.Login .avatars-grid {
  display: grid;
  grid-template-columns: auto auto;
  grid-column-gap: 40px;
  grid-row-gap: 15px;
  justify-content: center;
}

